--- a/index.html
+++ b/index.html
@@ -37,7 +37,13 @@
             <ul>
               <li><a href="">Home</a></li>
               <li><a href="">Products</a></li>
-              <a href="#"><img src="images/nav-logo.png" alt="" /></a>
+              <div class="logo"><a href="#"><img src="images/nav-logo.png" alt="" /></a></div>
+              <li><a href="">Offres</a></li>
+              <li><a href="">Contact</a></li>
+            </ul>
+            <ul class="phone">
+              <div class="logo"><a href="#"><img src="images/nav-logo.png" alt="" /></a></div>
+              <li><a href="">Products</a></li>
               <li><a href="">Offres</a></li>
               <li><a href="">Contact</a></li>
             </ul>
@@ -45,16 +51,61 @@
           <div class="description">
             <div class="text">
               <h1>
-                أكياس بلاستيكية متينة وعصرية تعكس هوية علامتك التجارية بشكل
-                مميز 
+                أكياس بلاستيكية متينة وعصرية تعكس هوية علامتك التجارية بشكل مميز
               </h1>
             </div>
             <div class="img">
-              <img src="images/Asset 6-8.png" alt="">
+              <img src="images/Asset 6-8.png" alt="" />
             </div>
+          </div>
+          <div class="explore">
+            <a href="#quest"> ابدأ الرحلة</a>
           </div>
         </div>
       </header>
+      <!-- end header -->
+      <!-- start question section  -->
+      <div class="quest" id="quest">
+        <div class="squar">
+          <img src="images/Asset 1-8.png" alt="" />
+        </div>
+        <h1>ماذا نقدم</span></h1>
+        <h1>what we <span>provide</span></h1>
+        <div class="container">
+          <div class="quests quest-1">
+            <div class="icon">
+              <i class="fa-solid fa-medal"></i>
+              <p>الجودة</p>
+            </div>
+            <p>
+              أكياس من أجود أنواع البلاستيك مع تصميم احترافي ليعكس فخامة و جودة
+              خدماتكم للزبائن
+            </p>
+          </div>
+          <div class="quests quest-2">
+            <div class="icon">
+              <i class="fa-solid fa-hand-fist"></i>
+               
+              <p>القوة</p>
+            </div>
+            <p>
+              قوة تحمل عالية بفضل تكنلوجيا الخياطة من جانبي الكيس و ليس من
+              الأسفل بالاضافة الى حامل معزز بالبلاستيك
+            </p>
+          </div>
+          <div class="quests quest-3">
+            <div class="icon">
+              <i class="fa-solid fa-down-left-and-up-right-to-center"></i>
+              <p>الحجم</p>
+            </div>
+            <p>
+              متوفر أكياس بأحجام وألوان مختلفة لحمل السلع الجغيرة جدا الى السلع
+              الكبيرة نسبيا
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- end seciont section -->
     </body>
   </html>
 </html>
