--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <p>الحجم</p>
             </div>
             <p>
-              متوفر أكياس بأحجام وألوان مختلفة لحمل السلع الجغيرة جدا الى السلع
+              متوفر أكياس بأحجام وألوان مختلفة لحمل السلع الصغيرة جدا الى السلع
               الكبيرة نسبيا
             </p>
           </div>
