--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <div class="quests quest-2">
             <div class="icon">
               <i class="fa-solid fa-hand-fist"></i>
-               
+
               <p>القوة</p>
             </div>
             <p>
@@ -106,6 +106,73 @@
         </div>
       </div>
       <!-- end seciont section -->
+      <!-- start gallery section -->
+      <div class="gallery">
+        <h1>منتجاتنا</h1>
+        <div class="container">
+          <div class="gall" tabIndex="0">
+            <div class="card">
+              <div class="front">
+                <img src="images/img-1.jpg" alt="">
+              </div>
+              <div class="back">
+                <h3>Whoaaa!!!</h3>
+              </div>
+            </div>
+          </div>
+          <div class="gall" tabIndex="0">
+            <div class="card">
+              <div class="front">
+                <img src="images/img-2.jpg" alt="">
+              </div>
+              <div class="back">
+                <h3>Whoaaa!!!</h3>
+              </div>
+            </div>
+          </div>
+          <div class="gall" tabIndex="0">
+            <div class="card">
+              <div class="front">
+                <img src="images/img-3.jpg" alt="">
+              </div>
+              <div class="back">
+                <h3>Whoaaa!!!</h3>
+              </div>
+            </div>
+          </div>
+          <div class="gall" tabIndex="0">
+            <div class="card">
+              <div class="front">
+                <img src="images/img-4.jpg" alt="">
+              </div>
+              <div class="back">
+                <h3>Whoaaa!!!</h3>
+              </div>
+            </div>
+          </div>
+          <div class="gall" tabIndex="0">
+            <div class="card">
+              <div class="front">
+                <img src="images/img-5.jpg" alt="">
+              </div>
+              <div class="back">
+                <h3>Whoaaa!!!</h3>
+              </div>
+            </div>
+          </div>
+          <div class="gall" tabIndex="0">
+            <div class="card">
+              <div class="front">
+                <img src="images/img-6.jpg" alt="">
+              </div>
+              <div class="back">
+                <h3>Whoaaa!!!</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- end gallery section -->
     </body>
   </html>
 </html>
