--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
       <!-- font awsome libruary  -->
       <link rel="stylesheet" href="css/all.min.css" />
       <!-- google fonts  -->
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-      <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet" />
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
       <!-- mobile style -->
       <link
         rel="stylesheet"
@@ -36,14 +34,14 @@
           <nav>
             <ul>
               <li><a href="">Home</a></li>
-              <li><a href="">Products</a></li>
+              <li><a href="#products">Products</a></li>
               <div class="logo"><a href="#"><img src="images/nav-logo.png" alt="" /></a></div>
               <li><a href="">Offres</a></li>
               <li><a href="">Contact</a></li>
             </ul>
             <ul class="phone">
               <div class="logo"><a href="#"><img src="images/nav-logo.png" alt="" /></a></div>
-              <li><a href="">Products</a></li>
+              <li><a href="#products">Products</a></li>
               <li><a href="">Offres</a></li>
               <li><a href="">Contact</a></li>
             </ul>
@@ -107,7 +105,7 @@
       </div>
       <!-- end seciont section -->
       <!-- start gallery section -->
-      <div class="gallery">
+      <div class="gallery" id="products">
         <h1>منتجاتنا</h1>
         <div class="container">
           <div class="gall" tabIndex="0">
@@ -173,6 +171,24 @@
         </div>
       </div>
       <!-- end gallery section -->
+      <!-- start price section  -->
+      <div class="price">
+        <div class="container">
+          <div class="prix">
+            <img src="images/img1.png" alt="">
+          </div>
+          <div class="prix">
+            <img src="images/img2.png" alt="">
+          </div>
+          <div class="prix">
+            <img src="images/img3.png" alt="">
+          </div>
+          <div class="prix">
+            <img src="images/img4.png" alt="">
+          </div>
+        </div>
+      </div>
+      <!-- wnd price section  -->
     </body>
   </html>
 </html>
