--- a/index.html
+++ b/index.html
@@ -16,10 +16,18 @@
       <link rel="stylesheet" href="css/normalize.css" />
       <!-- font awsome libruary  -->
       <link rel="stylesheet" href="css/all.min.css" />
-      <!-- google fonts  -->
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+      <!-- google fonts arabic -->
+      <link rel="preconnect" href="https://fonts.googleapis.com" />
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      <link
+        href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@100;200;300;400;500;600;700&display=swap"
+        rel="stylesheet" />
+      <!-- google fonts french -->
+      <link rel="preconnect" href="https://fonts.googleapis.com" />
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet" />
       <!-- mobile style -->
       <link
         rel="stylesheet"
@@ -32,163 +40,40 @@
       <header>
         <div class="container">
           <nav>
-            <ul>
-              <li><a href="">Home</a></li>
-              <li><a href="#products">Products</a></li>
-              <div class="logo"><a href="#"><img src="images/nav-logo.png" alt="" /></a></div>
-              <li><a href="">Offres</a></li>
-              <li><a href="">Contact</a></li>
-            </ul>
-            <ul class="phone">
-              <div class="logo"><a href="#"><img src="images/nav-logo.png" alt="" /></a></div>
-              <li><a href="#products">Products</a></li>
-              <li><a href="">Offres</a></li>
-              <li><a href="">Contact</a></li>
-            </ul>
+            <a href="">Home</a>
+            <a href="" id="about">About</a>
+            <div class="logo">
+              <a href="#"><img src="images/nav-logo.png" alt="" /></a>
+            </div>
+            <a href="">Products</a>
+            <a href="">Contact</a>
           </nav>
-          <div class="description">
-            <div class="text">
-              <h1>
-                أكياس بلاستيكية متينة وعصرية تعكس هوية علامتك التجارية بشكل مميز
-              </h1>
-            </div>
-            <div class="img">
-              <img src="images/Asset 6-8.png" alt="" />
-            </div>
-          </div>
-          <div class="explore">
-            <a href="#quest"> ابدأ الرحلة</a>
+          <div class="text">
+            <h1>
+              ajoute une couleur à votre vie avec une impression exceptionnelle
+            </h1>
+            <a href="#about">Explore</a>
           </div>
         </div>
       </header>
-      <!-- end header -->
-      <!-- start question section  -->
-      <div class="quest" id="quest">
-        <div class="squar">
-          <img src="images/Asset 1-8.png" alt="" />
-        </div>
-        <h1>ماذا نقدم</span></h1>
-        <h1>what we <span>provide</span></h1>
+      <div class="question">
         <div class="container">
-          <div class="quests quest-1">
-            <div class="icon">
-              <i class="fa-solid fa-medal"></i>
-              <p>الجودة</p>
-            </div>
+          <div class="text">
+            <h1>من نحن ؟</h1>
             <p>
-              أكياس من أجود أنواع البلاستيك مع تصميم احترافي ليعكس فخامة و جودة
-              خدماتكم للزبائن
+              شريككم المتخصص في الطباعة و الإشهار الذي يضيف لمسة من الإبداع الى
+              علامتكم التجارية الفاخرة والمميزة.
             </p>
-          </div>
-          <div class="quests quest-2">
-            <div class="icon">
-              <i class="fa-solid fa-hand-fist"></i>
-
-              <p>القوة</p>
-            </div>
             <p>
-              قوة تحمل عالية بفضل تكنلوجيا الخياطة من جانبي الكيس و ليس من
-              الأسفل بالاضافة الى حامل معزز بالبلاستيك
-            </p>
-          </div>
-          <div class="quests quest-3">
-            <div class="icon">
-              <i class="fa-solid fa-down-left-and-up-right-to-center"></i>
-              <p>الحجم</p>
-            </div>
-            <p>
-              متوفر أكياس بأحجام وألوان مختلفة لحمل السلع الصغيرة جدا الى السلع
-              الكبيرة نسبيا
+              سنساعدكم على الطباعة على العديد من المنتجات مثل<span>
+                العلب ، اكياس البلاستيك، carts visit ،الأقمصة،الأكياس الورقية
+                ...</span
+              >
             </p>
           </div>
         </div>
       </div>
-      <!-- end seciont section -->
-      <!-- start gallery section -->
-      <div class="gallery" id="products">
-        <h1>منتجاتنا</h1>
-        <div class="container">
-          <div class="gall" tabIndex="0">
-            <div class="card">
-              <div class="front">
-                <img src="images/img-1.jpg" alt="">
-              </div>
-              <div class="back">
-                <h3>Whoaaa!!!</h3>
-              </div>
-            </div>
-          </div>
-          <div class="gall" tabIndex="0">
-            <div class="card">
-              <div class="front">
-                <img src="images/img-2.jpg" alt="">
-              </div>
-              <div class="back">
-                <h3>Whoaaa!!!</h3>
-              </div>
-            </div>
-          </div>
-          <div class="gall" tabIndex="0">
-            <div class="card">
-              <div class="front">
-                <img src="images/img-3.jpg" alt="">
-              </div>
-              <div class="back">
-                <h3>Whoaaa!!!</h3>
-              </div>
-            </div>
-          </div>
-          <div class="gall" tabIndex="0">
-            <div class="card">
-              <div class="front">
-                <img src="images/img-4.jpg" alt="">
-              </div>
-              <div class="back">
-                <h3>Whoaaa!!!</h3>
-              </div>
-            </div>
-          </div>
-          <div class="gall" tabIndex="0">
-            <div class="card">
-              <div class="front">
-                <img src="images/img-5.jpg" alt="">
-              </div>
-              <div class="back">
-                <h3>Whoaaa!!!</h3>
-              </div>
-            </div>
-          </div>
-          <div class="gall" tabIndex="0">
-            <div class="card">
-              <div class="front">
-                <img src="images/img-6.jpg" alt="">
-              </div>
-              <div class="back">
-                <h3>Whoaaa!!!</h3>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- end gallery section -->
-      <!-- start price section  -->
-      <div class="price">
-        <div class="container">
-          <div class="prix">
-            <img src="images/img1.png" alt="">
-          </div>
-          <div class="prix">
-            <img src="images/img2.png" alt="">
-          </div>
-          <div class="prix">
-            <img src="images/img3.png" alt="">
-          </div>
-          <div class="prix">
-            <img src="images/img4.png" alt="">
-          </div>
-        </div>
-      </div>
-      <!-- wnd price section  -->
     </body>
   </html>
 </html>
+<!-- inside shadoew effect -->
