--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         href="css/phone-style.css"
         media="(max-width:768px)" />
       <!--website title -->
-      <title>Printing Lab</title>
+      <title>Printo</title>
     </head>
     <body>
       <header>
