--- a/index.html
+++ b/index.html
@@ -1,79 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
-  <html lang="en">
-    <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <!-- website description -->
-      <meta
-        name="Description"
-        content="اكتشف تشكيلتنا المختارة بعناية من القطع الرائعة التي تصمم لترقية كل زاوية في منزلك" />
-      <!-- heade icon  -->
-      <link rel="icon" href="images/printing-lab.png" />
-      <!-- css main style -->
-      <link rel="stylesheet" href="css/style.css" />
-      <!-- normalize style -->
-      <link rel="stylesheet" href="css/normalize.css" />
-      <!-- font awsome libruary  -->
-      <link rel="stylesheet" href="css/all.min.css" />
-      <!-- google fonts arabic -->
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-      <link
-        href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@100;200;300;400;500;600;700&display=swap"
-        rel="stylesheet" />
-      <!-- google fonts french -->
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-      <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-        rel="stylesheet" />
-      <!-- mobile style -->
-      <link
-        rel="stylesheet"
-        href="css/phone-style.css"
-        media="(max-width:768px)" />
-      <!--website title -->
-      <title>Printo</title>
-    </head>
-    <body>
-      <header>
-        <div class="container">
-          <nav>
-            <a href="">Home</a>
-            <a href="" id="about">About</a>
-            <div class="logo">
-              <a href="#"><img src="images/nav-logo.png" alt="" /></a>
-            </div>
-            <a href="">Products</a>
-            <a href="">Contact</a>
-          </nav>
-          <div class="text">
-            <h1>
-              ajoute une couleur à votre vie avec une impression exceptionnelle
-            </h1>
-            <a href="#about">Explore</a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- website description -->
+    <meta
+      name="Description"
+      content="اكتشف تشكيلتنا المختارة بعناية من القطع الرائعة التي تصمم لترقية كل زاوية في منزلك" />
+    <!-- heade icon  -->
+    <link rel="icon" href="images/printing-lab.png" />
+    <!-- css main style -->
+    <link rel="stylesheet" href="css/style.css" />
+    <!-- normalize style -->
+    <link rel="stylesheet" href="css/normalize.css" />
+    <!-- font awsome libruary  -->
+    <link rel="stylesheet" href="css/all.min.css" />
+    <!-- google fonts arabic -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@100;200;300;400;500;600;700&display=swap"
+      rel="stylesheet" />
+    <!-- google fonts french -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet" />
+    <!-- mobile style -->
+    <link
+      rel="stylesheet"
+      href="css/phone-style.css"
+      media="(max-width:768px)" />
+    <!--website title -->
+    <title>Printo</title>
+  </head>
+  <body>
+    <!-- start header -->
+    <header>
+      <div class="container">
+        <nav>
+          <a href="">Home</a>
+          <a href="" id="about">About</a>
+          <div class="logo">
+            <a href="#"><img src="images/nav-logo.png" alt="" /></a>
           </div>
-        </div>
-      </header>
-      <div class="question">
-        <div class="container">
-          <div class="text">
-            <h1>من نحن ؟</h1>
-            <p>
-              شريككم المتخصص في الطباعة و الإشهار الذي يضيف لمسة من الإبداع الى
-              علامتكم التجارية الفاخرة والمميزة.
-            </p>
-            <p>
-              سنساعدكم على الطباعة على العديد من المنتجات مثل<span>
-                العلب ، اكياس البلاستيك، carts visit ،الأقمصة،الأكياس الورقية
-                ...</span
-              >
-            </p>
-          </div>
+          <a href="">Products</a>
+          <a href="">Contact</a>
+        </nav>
+        <div class="text">
+          <h1>
+            ajoute une couleur à votre vie avec une impression exceptionnelle
+          </h1>
+          <a href="#about">Explore</a>
         </div>
       </div>
-    </body>
-  </html>
+    </header>
+    <!-- end header -->
+    <!-- start question -->
+    <div class="question">
+      <div class="container">
+        <div class="text">
+          <h1>من نحن ؟</h1>
+          <p>
+            شريككم المتخصص في الطباعة و الإشهار الذي يضيف لمسة من الإبداع الى
+            علامتكم التجارية الفاخرة والمميزة.
+          </p>
+          <p>
+            سنساعدكم على الطباعة على العديد من المنتجات مثل<span>
+              العلب ، اكياس البلاستيك، carts visit ،الأقمصة،الأكياس الورقية
+              ...</span
+            >
+          </p>
+        </div>
+      </div>
+    </div>
+    <!-- end question -->
+    <!-- start products -->
+    <div class="products">
+      <h1>nos produit</h1>
+      <div class="container">
+        <div class="pruduit">
+          <div class="image">
+            <img src="images/LIHLHL;.jpg" alt="" />
+          </div>
+          <div class="link"><a href="">more</a></div>
+        </div>
+        <div class="pruduit">
+          <div class="image">
+            <img src="images/Front.jpg" alt="" />
+          </div>
+          <div class="link"><a href="">more</a></div>
+        </div>
+        <div class="pruduit">
+          <div class="image">
+            <img src="images/lkdfghjsls;fdkgj.jpg" alt="" />
+          </div>
+          <div class="link"><a href="">more</a></div>
+        </div>
+        <div class="pruduit">
+          <div class="image">
+            <img src="images/RIKLUWGTIREUTY.jpg" alt="" />
+          </div>
+          <div class="link"><a href="">more</a></div>
+        </div>
+        <div class="pruduit">
+          <div class="image">
+            <img src="images/Business Card_.jpg" alt="" />
+          </div>
+          <div class="link"><a href="">more</a></div>
+        </div>
+        <div class="pruduit">
+          <div class="image">
+            <img src="images/5780320.jpg" alt="" />
+          </div>
+          <div class="link"><a href="">more</a></div>
+        </div>
+      </div>
+    </div>
+    <!-- end products -->
+    <!-- start gallery -->
+    <div class="gallery">
+      <div class="container">
+        <h1>قريــــبا</h1>
+      </div>
+    </div>
+    <!-- end gallery -->
+    <!-- start contact -->
+    <!-- <div class="contact">
+      <h1>contact us</h1>
+      <div class="container">
+        <div class="infos">
+          <div class="text">
+            <h1>get in touch</h1>
+            <div class="icon">
+              <i class="fa-brands fa-instagram"></i>
+              <a href="https://www.instagram.com/printo_19?igsh=eHhjdjg4M2pucjIz" target="_blank">printo_19</a>
+            </div>
+            <div class="icon">
+              <i class="fa-brands fa-whatsapp"></i>
+              <a href="https://wa.me/qr/7VRWHMZ3NJAXB1" target="_blank">+213797373782</a>
+            </div>
+            <div class="icon">
+              <i class="fa-solid fa-phone"></i>
+              <a href="tel:+213668661620">+213668661620</a>
+            </div>
+          </div>
+        </div>
+        <div class="image">
+          <img src="images/contact.png" alt="">
+        </div>
+      </div>
+    </div> -->
+    <!-- end contact -->
+    <!-- start footer -->
+    <!-- <footer>
+      <div class="container">
+        <div class="image">
+          <img src="images/Asset 1-8.png" alt="" />
+        </div>
+        <p>All rights reserved © 2024</p>
+      </div>
+    </footer> -->
+    <!-- end footer -->
+  </body>
 </html>
-<!-- inside shadoew effect -->
