--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
       <div class="container">
         <nav>
           <a href="">Home</a>
-          <a href="" id="about">About</a>
+          <a href="#about">About</a>
           <div class="logo">
             <a href="#"><img src="images/nav-logo.png" alt="" /></a>
           </div>
-          <a href="">Products</a>
-          <a href="">Contact</a>
+          <a href="#products">Products</a>
+          <a href="#contact">Contact</a>
         </nav>
         <div class="text">
           <h1>
@@ -58,7 +58,7 @@
     </header>
     <!-- end header -->
     <!-- start question -->
-    <div class="question">
+    <div class="question" id="about">
       <div class="container">
         <div class="text">
           <h1>من نحن ؟</h1>
@@ -77,7 +77,7 @@
     </div>
     <!-- end question -->
     <!-- start products -->
-    <div class="products">
+    <div class="products" id="products">
       <h1>nos produit</h1>
       <div class="container">
         <div class="pruduit">
@@ -127,41 +127,42 @@
     </div>
     <!-- end gallery -->
     <!-- start contact -->
-    <!-- <div class="contact">
-      <h1>contact us</h1>
+    <div class="contact">
       <div class="container">
         <div class="infos">
-          <div class="text">
-            <h1>get in touch</h1>
-            <div class="icon">
-              <i class="fa-brands fa-instagram"></i>
-              <a href="https://www.instagram.com/printo_19?igsh=eHhjdjg4M2pucjIz" target="_blank">printo_19</a>
-            </div>
-            <div class="icon">
-              <i class="fa-brands fa-whatsapp"></i>
-              <a href="https://wa.me/qr/7VRWHMZ3NJAXB1" target="_blank">+213797373782</a>
-            </div>
-            <div class="icon">
-              <i class="fa-solid fa-phone"></i>
-              <a href="tel:+213668661620">+213668661620</a>
-            </div>
+          <div class="img">
+            <img src="images/nav-logo.png" alt="" />
+          </div>
+          <div class="icon">
+            <i class="fa-brands fa-whatsapp"></i>
+            <a href="https://wa.me/qr/7VRWHMZ3NJAXB1" target="_blank"
+              >+213797373782</a
+            >
+          </div>
+          <div class="icon">
+            <i class="fa-solid fa-phone"></i>
+            <a href="tel:+213668661620">+213668661620</a>
+          </div>
+          <div class="link">
+            <a
+              href="https://www.instagram.com/printo_19?igsh=eHhjdjg4M2pucjIz"
+              target="_blank"
+              >visité</a
+            >
           </div>
         </div>
-        <div class="image">
-          <img src="images/contact.png" alt="">
-        </div>
       </div>
-    </div> -->
+    </div>
     <!-- end contact -->
     <!-- start footer -->
-    <!-- <footer>
+    <footer>
       <div class="container">
         <div class="image">
           <img src="images/Asset 1-8.png" alt="" />
         </div>
         <p>All rights reserved © 2024</p>
       </div>
-    </footer> -->
+    </footer>
     <!-- end footer -->
   </body>
 </html>
