--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </div>
     <!-- end gallery -->
     <!-- start contact -->
-    <div class="contact">
+    <div class="contact" id="contact">
       <div class="container">
         <div class="infos">
           <div class="img">
