--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- website description -->
     <meta
       name="Description"
-      content="اكتشف تشكيلتنا المختارة بعناية من القطع الرائعة التي تصمم لترقية كل زاوية في منزلك" />
+      content="From ideas to print - We make it happen" />
     <!-- heade icon  -->
     <link rel="icon" href="images/printing-lab.png" />
     <!-- css main style -->
@@ -84,37 +84,31 @@
           <div class="image">
             <img src="images/LIHLHL;.jpg" alt="" />
           </div>
-          <div class="link"><a href="">more</a></div>
         </div>
         <div class="pruduit">
           <div class="image">
             <img src="images/Front.jpg" alt="" />
           </div>
-          <div class="link"><a href="">more</a></div>
         </div>
         <div class="pruduit">
           <div class="image">
             <img src="images/lkdfghjsls;fdkgj.jpg" alt="" />
           </div>
-          <div class="link"><a href="">more</a></div>
         </div>
         <div class="pruduit">
           <div class="image">
             <img src="images/RIKLUWGTIREUTY.jpg" alt="" />
           </div>
-          <div class="link"><a href="">more</a></div>
         </div>
         <div class="pruduit">
           <div class="image">
             <img src="images/Business Card_.jpg" alt="" />
           </div>
-          <div class="link"><a href="">more</a></div>
         </div>
         <div class="pruduit">
           <div class="image">
             <img src="images/5780320.jpg" alt="" />
           </div>
-          <div class="link"><a href="">more</a></div>
         </div>
       </div>
     </div>
@@ -135,13 +129,13 @@
           </div>
           <div class="icon">
             <i class="fa-brands fa-whatsapp"></i>
-            <a href="https://wa.me/qr/7VRWHMZ3NJAXB1" target="_blank"
-              >+213797373782</a
+            <a href="hhttps://wa.me/message/H7KIO2KB3BBHL1" target="_blank"
+              >+213665110565</a
             >
           </div>
           <div class="icon">
             <i class="fa-solid fa-phone"></i>
-            <a href="tel:+213668661620">+213668661620</a>
+            <a href="tel:+213797373782">+213797373782</a>
           </div>
           <div class="link">
             <a
